--- a/src/main/resources/templates/addBoot.html
+++ b/src/main/resources/templates/addBoot.html
@@ -44,7 +44,7 @@
 <form method="POST" th:action="@{/boots/add}" th:object="${boot}">
     <div class="mb-3">
         <label for="brandName">Brand Name</label>
-        <input type="text" th:field="*{boot.brandName}" class="form-control" id="brandName" name="brandName" placeholder="Brand Name" required>
+        <input type="text" th:field="*{brandName}" class="form-control" id="brandName" name="brandName" placeholder="Brand Name" required>
     </div>
     <div class="mb-3">
         <label for="name">Name</label>
