--- a/src/main/resources/templates/boots.html
+++ b/src/main/resources/templates/boots.html
@@ -30,13 +30,13 @@
             <a class="nav-link" th:href="@{/boots/add}">Add a new Boot</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link disabled" th:href="@{/boots/${id}}">Details</a>
+            <a class="nav-link disabled" th:href="@{/boots/-1}">Details</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link disabled" th:href="@{/boots/${id}/edit}">Edit</a>
+            <a class="nav-link disabled" th:href="@{/boots/-1/edit}">Edit</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link disabled" th:href="@{/boots/${id}/delete}">Delete</a>
+            <a class="nav-link disabled" th:href="@{/boots/-1/delete}">Delete</a>
         </li>
     </ul>
 </div>
@@ -60,9 +60,9 @@
         <td th:text="${boot.size}"/>
         <td>$ <span th:text="${#numbers.formatDecimal(boot.price, 0, 'COMMA', 2, 'POINT')}"></span></td>
         <td>
-            <a th:href="@{/boots/${boot.getId()}/edit}" class="btn btn-outline-info">Edit</a>
-            &nbsp;&nbsp;
-            <a th:href="@{/boots/${boot.getId()}/delete}" class="btn btn-outline-danger">Delete</a>
+            <a th:href="@{'/boots/' + ${boot.id} + '/edit'}" class="btn btn-outline-info">Edit</a>
+            &nbsp;|&nbsp;
+            <a th:href="@{'/boots/' + ${boot.id} + '/delete'}" class="btn btn-outline-danger">Delete</a>
         </td>
     </tr>
     </tbody>
