--- a/src/main/resources/templates/editBoot.html
+++ b/src/main/resources/templates/editBoot.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add a new Boot</title>
+    <title>Edit Boot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -27,21 +27,21 @@
             <a class="nav-link" th:href="@{/boots}">All Boots</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" th:href="@{/boots/add}">Add a new Boot</a>
+            <a class="nav-link" aria-current="page" th:href="@{/boots/add}">Add a new Boot</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link disabled" th:href="@{'/boots/' + ${boot.id}}">Details</a>
+            <a class="nav-link" th:href="@{'/boots/' + ${boot.id}}">Details</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link disabled" th:href="@{'/boots/' + ${boot.id} + '/edit'}">Edit</a>
+            <a class="nav-link active" th:href="@{'/boots/' + ${boot.id} + '/edit'}">Edit</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link disabled" th:href="@{'/boots/' + ${boot.id} + '/delete'}">Delete</a>
+            <a class="nav-link" th:href="@{'/boots/' + ${boot.id} + '/delete'}">Delete</a>
         </li>
     </ul>
 </div>
 <h1>Add a new Boot</h1>
-<form th:method="post" th:action="@{/boots/add}" th:object="${boot}">
+<form th:method="post" th:action="@{'/boots/' + ${boot.id} + '/edit'}" th:object="${boot}">
     <div class="mb-3">
         <label for="brandName">Brand Name</label>
         <input type="text" th:field="*{brandName}" class="form-control" id="brandName" name="brandName" placeholder="Brand Name" required>
