--- a/src/main/resources/templates/addBoot.html
+++ b/src/main/resources/templates/addBoot.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Add a new Boot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,6 +22,7 @@
         </div>
     </div>
 </nav>
+<div class="buffer"></div>
 <div class="container-fluid">
     <ul class="nav nav-tabs">
         <li class="nav-item">
@@ -40,7 +42,9 @@
         </li>
     </ul>
 </div>
+<div class="buffer"></div>
 <h1>Add a new Boot</h1>
+<div class="buffer"></div>
 <form th:method="post" th:action="@{/boots/add}" th:object="${boot}">
     <div class="mb-3">
         <label for="brandName">Brand Name</label>
