--- a/src/main/resources/templates/boots.html
+++ b/src/main/resources/templates/boots.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Boots</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,6 +23,7 @@
         </div>
     </div>
 </nav>
+<div class="buffer"></div>
 <div class="container-fluid">
     <ul class="nav nav-tabs">
         <li class="nav-item">
@@ -40,8 +43,10 @@
         </li>
     </ul>
 </div>
+<div class="buffer"></div>
 <h1>All Boots</h1>
-<table class="table">
+<div class="buffer"></div>
+<table class="table table-hover align-middle">
     <thead>
     <tr>
         <th scope="col">Brand</th>
@@ -52,8 +57,8 @@
         <th scope="col">Actions</th>
     </tr>
     </thead>
-    <tbody>
-    <tr th:each="boot: ${boots}">
+    <tbody class="table-group-divider">
+    <tr th:each="boot: ${boots}" th:boot-id="${boot.id}" style="cursor: pointer" onclick="rowClicked(this.getAttribute('boot-id'))">
         <td th:text="${boot.brandName}"/>
         <td th:text="${boot.name}"/>
         <td th:text="${boot.description}"/>
@@ -61,11 +66,17 @@
         <td>$ <span th:text="${#numbers.formatDecimal(boot.price, 0, 'COMMA', 2, 'POINT')}"></span></td>
         <td>
             <a th:href="@{'/boots/' + ${boot.id} + '/edit'}" class="btn btn-outline-info">Edit</a>
-            &nbsp;|&nbsp;
+            &nbsp;&nbsp;
             <a th:href="@{'/boots/' + ${boot.id} + '/delete'}" class="btn btn-outline-danger">Delete</a>
         </td>
     </tr>
+
     </tbody>
 </table>
+<script>
+    function rowClicked(id) {
+        location.href = "/boots/" + id;
+    }
+</script>
 </body>
 </html>
