--- a/src/main/resources/templates/editBoot.html
+++ b/src/main/resources/templates/editBoot.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Edit Boot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,26 +22,29 @@
         </div>
     </div>
 </nav>
+<div class="buffer"></div>
 <div class="container-fluid">
     <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link" th:href="@{/boots}">All Boots</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" th:href="@{/boots/add}">Add a new Boot</a>
+            <a class="nav-link" th:href="@{/boots/add}">Add a new Boot</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" th:href="@{'/boots/' + ${boot.id}}">Details</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" th:href="@{'/boots/' + ${boot.id} + '/edit'}">Edit</a>
+            <a class="nav-link active" aria-current="page" th:href="@{'/boots/' + ${boot.id} + '/edit'}">Edit</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" th:href="@{'/boots/' + ${boot.id} + '/delete'}">Delete</a>
         </li>
     </ul>
 </div>
+<div class="buffer"></div>
 <h1>Add a new Boot</h1>
+<div class="buffer"></div>
 <form th:method="post" th:action="@{'/boots/' + ${boot.id} + '/edit'}" th:object="${boot}">
     <div class="mb-3">
         <label for="brandName">Brand Name</label>
