--- a/src/main/resources/templates/addBoot.html
+++ b/src/main/resources/templates/addBoot.html
@@ -7,41 +7,9 @@
     <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">Boot Store</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/boots}">Boots</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/navbar :: navbar (active='boots')"></div>
 <div class="buffer"></div>
-<div class="container-fluid">
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/boots}">All Boots</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" th:href="@{/boots/add}">Add a new Boot</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" th:href="@{'/boots/' + ${boot.id}}">Details</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" th:href="@{'/boots/' + ${boot.id} + '/edit'}">Edit</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" th:href="@{'/boots/' + ${boot.id} + '/delete'}">Delete</a>
-        </li>
-    </ul>
-</div>
+<div th:replace="fragments/navtabs :: navtabs (active='add', id='-1')"></div>
 <div class="buffer"></div>
 <h1>Add a new Boot</h1>
 <div class="buffer"></div>
