--- a/src/main/resources/templates/deleteBoot.html
+++ b/src/main/resources/templates/deleteBoot.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <title>Boot Details</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
 <div th:replace="fragments/navbar :: navbar (active='boots')"></div>
-<div class="buffer"></div>
+<div class="y-buffer"></div>
 <div th:replace="fragments/navtabs :: navtabs (active='delete', id=${boot.id})"></div>
-<div class="buffer"></div>
-<h1>Delete Boot</h1>
-<div class="buffer"></div>
-<h4>Brand</h4>
-<p th:text="${boot.brandName}"></p>
-<h4>Name</h4>
-<p th:text="${boot.name}"></p>
-<h4>Description</h4>
-<p th:text="${boot.description}"></p>
-<h4>Size</h4>
-<p th:text="${boot.size}"></p>
-<h4>Price</h4>
-<p th:text="${boot.price}"></p>
-<form method="post" th:action="@{'/boots/' + ${boot.id} + '/delete'}" th:object="${boot}">
-    <input type="submit" class="btn btn-danger" value="Delete"/>
-    <a class="btn btn-outline-primary" th:href="@{/boots}">Cancel</a>
-</form>
+<div class="container my-5">
+    <h1>Delete Boot</h1>
+    <div class="y-buffer"></div>
+    <h4>Brand</h4>
+    <p th:text="${boot.brandName}"></p>
+    <h4>Name</h4>
+    <p th:text="${boot.name}"></p>
+    <h4>Description</h4>
+    <p th:text="${boot.description}"></p>
+    <h4>Size</h4>
+    <p th:text="${boot.size}"></p>
+    <h4>Price</h4>
+    <p th:text="${boot.price}"></p>
+    <form method="post" th:action="@{'/boots/' + ${boot.id} + '/delete'}" th:object="${boot}">
+        <input type="submit" class="btn btn-danger" value="Delete"/>
+        <a class="btn btn-outline-primary" th:href="@{/boots}">Cancel</a>
+    </form>
+</div>
+
 </body>
 </html>
