--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -9,16 +9,22 @@
 </head>
 <body>
 <div th:fragment="navbar (active)" th:assert="${!#strings.isEmpty(active)}">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark">
+        <div class="container">
             <a class="navbar-brand" th:href="@{/}">Boot Store</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse">
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a th:class="${active == 'home' ? 'nav-link active' : 'nav-link'}" th:href="@{/}">Home</a>
+                        <a th:class="${active == 'home' ? 'nav-link active' : 'nav-link'}" th:attr="aria-current=|${active == 'home' ? 'page' : ''}|" th:href="@{/}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a th:class="${active == 'boots' ? 'nav-link active' : 'nav-link'}" th:href="@{/boots}">Boots</a>
+                        <a th:class="${active == 'boots' ? 'nav-link active' : 'nav-link'}" th:attr="aria-current=|${active == 'all' ? 'boots' : ''}|" th:href="@{/boots}">Boots</a>
+                    </li>
+                    <li class="nav-item">
+                        <a th:class="${active == 'store' ? 'nav-link active' : 'nav-link'}" th:attr="aria-current=|${active == 'all' ? 'store' : ''}|" th:href="@{/store}">Store</a>
                     </li>
                 </ul>
             </div>
