--- a/src/main/resources/templates/fragments/navtabs.html
+++ b/src/main/resources/templates/fragments/navtabs.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
 <div th:fragment="navtabs (active, id)" th:assert="${!#strings.isEmpty(active) and !#strings.isEmpty(id)}">
-    <div class="container-fluid">
+    <div class="container">
         <ul class="nav nav-tabs">
             <li class="nav-item">
                 <a th:class="${active == 'all' ? 'nav-link active' : 'nav-link'}" th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{/boots}">All Boots</a>
