--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,18 +2,17 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>Add a new Boot</title>
+    <title>Boot Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
-<div th:replace="fragments/navbar :: navbar (active='boots')"></div>
+<div th:replace="fragments/navbar :: navbar (active='home')"></div>
 <div class="y-buffer"></div>
-<div th:replace="fragments/navtabs :: navtabs (active='add', id='-1')"></div>
 <div class="container my-5">
-    <h1>Add a new Boot</h1>
-    <div class="y-buffer"></div>
-    <div th:replace="fragments/bootForm :: bootForm (boot=${boot}, status='new')"></div>
+    <h1 class="text-center"> Welcome to my Boot Store!</h1>
+    <p class="text-center">This is a small experiment working with Spring Boot and Thymeleaf, using bootstrap to help me get things moving quicker.</p>
 </div>
+
 </body>
 </html>
