--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/global.css">
-</head>
-<body>
-<div th:fragment="navbar (active)" th:assert="${!#strings.isEmpty(active)}">
+<div th:fragment="navbar (active)">
     <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark">
         <div class="container">
             <a class="navbar-brand" th:href="@{/}">Boot Store</a>
@@ -31,5 +21,3 @@
         </div>
     </nav>
 </div>
-</body>
-</html>
