--- a/src/main/resources/templates/addBoot.html
+++ b/src/main/resources/templates/addBoot.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
-<div th:replace="fragments/navbar :: navbar (active='boots')"></div>
+<div th:replace="~{fragments/navbar :: navbar (active='boots')}"></div>
 <div class="y-buffer"></div>
-<div th:replace="fragments/navtabs :: navtabs (active='add', id='-1')"></div>
-<div class="container my-5">
+<div th:replace="~{fragments/navtabs :: navtabs (active='add', id='-1')}"></div>
+<div class="container my-3">
     <h1>Add a new Boot</h1>
     <div class="y-buffer"></div>
-    <div th:replace="fragments/bootForm :: bootForm (boot=${boot}, status='new')"></div>
+    <div th:replace="~{fragments/bootForm :: bootForm (boot=${boot}, status='new')}"></div>
 </div>
 </body>
 </html>
