--- a/src/main/resources/templates/deleteBoot.html
+++ b/src/main/resources/templates/deleteBoot.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
-<div th:replace="fragments/navbar :: navbar (active='boots')"></div>
+<div th:replace="~{fragments/navbar :: navbar (active='boots')}"></div>
 <div class="y-buffer"></div>
-<div th:replace="fragments/navtabs :: navtabs (active='delete', id=${boot.id})"></div>
-<div class="container my-5">
+<div th:replace="~{fragments/navtabs :: navtabs (active='delete', id=${boot.id})}"></div>
+<div class="container my-3">
     <h1>Delete Boot</h1>
     <div class="y-buffer"></div>
     <h4>Brand</h4>
