--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 <head>
-  <meta charset="UTF-8">
-  <title>Boot Store</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/styles/global.css">
+    <meta charset="UTF-8">
+    <title>Boot Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
-<div th:replace="fragments/navbar :: navbar (active='store')"></div>
-<div class="container my-5">
-  <h1>Boot Store</h1>
+<div th:replace="~{fragments/navbar :: navbar (active='store')}"></div>
+<div class="container my-3">
+    <h1>Boot Store</h1>
+    <div class="row row-justify-content-md-center row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+        <div class="col" th:each="boot: ${boots}">
+            <div class="card h-100">
+                <img src="#" class="card-image-top" alt="..."/>
+                <div class="card-body">
+                    <div class="card-subtitle" th:text="${boot.brandName}"></div>
+                    <div class="card-title" th:text="${boot.name}"></div>
+                    <p class="card-text" th:text="${boot.description}"></p>
+                </div>
+                <form th:method="post" th:action="@{/store/addToCart}"  class="card-footer d-flex justify-content-between align-items-center">
+                    <div th:text="${'$' + boot.price}"></div>
+                    <div class="x-buffer"></div>
+                    <label for="size"></label>
+                    <div class="input-group" role="group">
+                        <select class="form-select" name="size" id="size">
+                            <option selected disabled value="0">Size</option>
+                            <option th:each="i : ${#numbers.sequence(1, 20)}" th:value="${i}" th:text="${i}"></option>
+                        </select>
+                        <input type="submit" class="btn btn-primary" value="Add to Cart"/>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
