--- a/src/main/resources/templates/fragments/navtabs.html
+++ b/src/main/resources/templates/fragments/navtabs.html
@@ -1,20 +1,58 @@
-<div th:fragment="navtabs (active, id)">
+<div th:fragment="bootNavtab (active, id)">
     <div class="container">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a th:class="${active == 'all' ? 'nav-link active' : 'nav-link'}" th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{/boots}">All Boots</a>
+                <a th:class="${active == 'all' ? 'nav-link active' : 'nav-link'}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{/boots}">All Boots</a>
             </li>
             <li class="nav-item">
-                <a th:class="${active == 'add' ? 'nav-link active' : 'nav-link'}" th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{/boots/add}">Add a new Boot</a>
+                <a th:class="${active == 'add' ? 'nav-link active' : 'nav-link'}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{/boots/add}">Add a new Boot</a>
             </li>
             <li class="nav-item">
-                <a th:class="${active == 'details' ? 'nav-link active' : 'nav-link'}" th:classappend="${id == '-1' ? ' disabled' : ''}" th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{'/boots/' + ${id}}">Details</a>
+                <a th:class="${active == 'details' ? 'nav-link active' : 'nav-link'}"
+                   th:classappend="${id == '-1' ? ' disabled' : ''}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{'/boots/' + ${id}}">Details</a>
             </li>
             <li class="nav-item">
-                <a th:class="${active == 'edit' ? 'nav-link active' : 'nav-link'}" th:classappend="${id == '-1' ? ' disabled' : ''}" th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{'/boots/' + ${id} + '/edit'}">Edit</a>
+                <a th:class="${active == 'edit' ? 'nav-link active' : 'nav-link'}"
+                   th:classappend="${id == '-1' ? ' disabled' : ''}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{'/boots/' + ${id} + '/edit'}">Edit</a>
             </li>
             <li class="nav-item">
-                <a th:class="${active == 'delete' ? 'nav-link active' : 'nav-link'}" th:classappend="${id == '-1' ? ' disabled' : ''}" th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{'/boots/' + ${id} + '/delete'}">Delete</a>
+                <a th:class="${active == 'delete' ? 'nav-link active' : 'nav-link'}"
+                   th:classappend="${id == '-1' ? ' disabled' : ''}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{'/boots/' + ${id} + '/delete'}">Delete</a>
+            </li>
+        </ul>
+    </div>
+</div>
+
+<div th:fragment="brandNavtab (active, id)">
+    <div class="container">
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a th:class="${active == 'all' ? 'nav-link active' : 'nav-link'}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{/brands}">All Brands</a>
+            </li>
+            <li class="nav-item">
+                <a th:class="${active == 'add' ? 'nav-link active' : 'nav-link'}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{/brands/add}">Add a new Brand</a>
+            </li>
+            <li class="nav-item">
+                <a th:class="${active == 'details' ? 'nav-link active' : 'nav-link'}"
+                   th:classappend="${id == '-1' ? ' disabled' : ''}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{'/brands/' + ${id}}">Details</a>
+            </li>
+            <li class="nav-item">
+                <a th:class="${active == 'edit' ? 'nav-link active' : 'nav-link'}"
+                   th:classappend="${id == '-1' ? ' disabled' : ''}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{'/brands/' + ${id} + '/edit'}">Edit</a>
+            </li>
+            <li class="nav-item">
+                <a th:class="${active == 'delete' ? 'nav-link active' : 'nav-link'}"
+                   th:classappend="${id == '-1' ? ' disabled' : ''}"
+                   th:attr="aria-current=|${active == 'all' ? 'page' : ''}|" th:href="@{'/brands/' + ${id} + '/delete'}">Delete</a>
             </li>
         </ul>
     </div>
