--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -16,7 +16,7 @@
             <div class="card h-100">
                 <img src="#" class="card-image-top" alt="..."/>
                 <div class="card-body">
-                    <div class="card-subtitle" th:text="${boot.brandName}"></div>
+                    <div class="card-subtitle" th:text="${boot.brand.name}"></div>
                     <div class="card-title" th:text="${boot.name}"></div>
                     <p class="card-text" th:text="${boot.description}"></p>
                 </div>
