--- a/src/main/resources/templates/boots/deleteBoot.html
+++ b/src/main/resources/templates/boots/deleteBoot.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>Boot Details</title>
+    <title>Delete Boot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/global.css">
@@ -10,12 +10,12 @@
 <body>
 <div th:replace="~{fragments/navbar :: navbar (active='boots')}"></div>
 <div class="y-buffer"></div>
-<div th:replace="~{fragments/navtabs :: navtabs (active='delete', id=${boot.id})}"></div>
+<div th:replace="~{fragments/navtabs :: bootNavtab (active='delete', id=${boot.bootId})}"></div>
 <div class="container my-3">
     <h1>Delete Boot</h1>
     <div class="y-buffer"></div>
     <h4>Brand</h4>
-    <p th:text="${boot.brandName}"></p>
+    <p th:text="${boot.brand.name}"></p>
     <h4>Name</h4>
     <p th:text="${boot.name}"></p>
     <h4>Description</h4>
@@ -24,9 +24,9 @@
     <p th:text="${boot.size}"></p>
     <h4>Price</h4>
     <p th:text="${boot.price}"></p>
-    <form method="post" th:action="@{'/boots/' + ${boot.id} + '/delete'}" th:object="${boot}">
+    <form method="post" th:action="@{'/boots/' + ${boot.bootId} + '/delete'}" th:object="${boot}">
         <input type="submit" class="btn btn-danger" value="Delete"/>
-        <a class="btn btn-outline-primary" th:href="@{/boots}">Cancel</a>
+        <a class="btn btn-outline-primary" th:href="@{/templates/boots}">Cancel</a>
     </form>
 </div>
 
