--- a/src/main/resources/templates/brands/addBrand.html
+++ b/src/main/resources/templates/brands/addBrand.html
@@ -2,18 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>Edit Boot</title>
+    <title>Add a new Brand</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
-<div th:replace="~{fragments/navbar :: navbar (active='boots')}"></div>
+<div th:replace="~{fragments/navbar :: navbar (active='brands')}"></div>
 <div class="y-buffer"></div>
-<div th:replace="~{fragments/navtabs :: navtabs (active='edit', id=${boot.id})}"></div>
+<div th:replace="~{fragments/navtabs :: brandNavtab (active='add', id='-1')}"></div>
 <div class="container my-3">
-    <h1>Update Boot</h1>
+    <h1>Add a new Brand</h1>
     <div class="y-buffer"></div>
-    <div th:replace="~{fragments/bootForm :: bootForm (boot=${boot}, status='edit')}"></div>
+    <div th:replace="~{fragments/brandForm :: brandForm (brand=${brand}, status='new')}"></div>
 </div>
 </body>
 </html>
