--- a/src/main/resources/templates/brands/editBrand.html
+++ b/src/main/resources/templates/brands/editBrand.html
@@ -2,27 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>Boot Details</title>
+    <title>Update Brand</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
-<div th:replace="~{fragments/navbar :: navbar (active='boots')}"></div>
+<div th:replace="~{fragments/navbar :: navbar (active='brands')}"></div>
 <div class="y-buffer"></div>
-<div th:replace="~{fragments/navtabs :: navtabs (active='details', id=${boot.id})}"></div>
+<div th:replace="~{fragments/navtabs :: brandNavtab (active='edit', id=${brand.brandId})}"></div>
 <div class="container my-3">
-    <h1>Boot Details</h1>
+    <h1>Add a new Brand</h1>
     <div class="y-buffer"></div>
-    <h4>Brand</h4>
-    <p th:text="${boot.brandName}"></p>
-    <h4>Name</h4>
-    <p th:text="${boot.name}"></p>
-    <h4>Description</h4>
-    <p th:text="${boot.description}"></p>
-    <h4>Size</h4>
-    <p th:text="${boot.size}"></p>
-    <h4>Price</h4>
-    <p th:text="${boot.price}"></p>
+    <div th:replace="~{fragments/brandForm :: brandForm (brand=${brand}, status='edit')}"></div>
 </div>
 </body>
 </html>
