--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,19 +2,28 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark">
         <div class="container">
             <a class="navbar-brand" th:href="@{/}">Boot Store</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a th:class="${active == 'home' ? 'nav-link active' : 'nav-link'}" th:attr="aria-current=|${active == 'home' ? 'page' : ''}|" th:href="@{/}">Home</a>
+                        <a th:class="${active == 'home' ? 'nav-link active' : 'nav-link'}"
+                           th:attr="aria-current=|${active == 'home' ? 'page' : ''}|" th:href="@{/}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a th:class="${active == 'boots' ? 'nav-link active' : 'nav-link'}" th:attr="aria-current=|${active == 'all' ? 'boots' : ''}|" th:href="@{/boots}">Boots</a>
+                        <a th:class="${active == 'boots' ? 'nav-link active' : 'nav-link'}"
+                           th:attr="aria-current=|${active == 'boots' ? 'page' : ''}|" th:href="@{/boots}">Boots</a>
                     </li>
                     <li class="nav-item">
-                        <a th:class="${active == 'store' ? 'nav-link active' : 'nav-link'}" th:attr="aria-current=|${active == 'all' ? 'store' : ''}|" th:href="@{/store}">Store</a>
+                        <a th:class="${active == 'brands' ? 'nav-link active' : 'nav-link'}"
+                           th:attr="aria-current=|${active == 'brands' ? 'page' : ''}|" th:href="@{/brands}">Brands</a>
+                    </li>
+                    <li class="nav-item">
+                        <a th:class="${active == 'store' ? 'nav-link active' : 'nav-link'}"
+                           th:attr="aria-current=|${active == 'store' ? 'page' : ''}|" th:href="@{/store}">Store</a>
                     </li>
                 </ul>
             </div>
