--- a/src/main/resources/templates/boots/deleteBoot.html
+++ b/src/main/resources/templates/boots/deleteBoot.html
@@ -20,11 +20,18 @@
     <p th:text="${boot.name}"></p>
     <h4>Description</h4>
     <p th:text="${boot.description}"></p>
-    <h4>Size</h4>
-    <p th:text="${boot.size}"></p>
+    <h4>Gender</h4>
+    <p th:text="${boot.gender}"></p>
+    <h4>Type</h4>
+    <p th:text="${boot.type}"></p>
+    <h4>Minimum Size</h4>
+    <p th:text="${boot.minSize}"></p>
+    <h4>Maximum Size</h4>
+    <p th:text="${boot.maxSize}"></p>
     <h4>Price</h4>
     <p th:text="${boot.price}"></p>
     <form method="post" th:action="@{'/boots/' + ${boot.bootId} + '/delete'}" th:object="${boot}">
+        <input type="hidden" th:value="${boot.bootId}" name="bootId"/>
         <input type="submit" class="btn btn-danger" value="Delete"/>
         <a class="btn btn-outline-primary" th:href="@{/templates/boots}">Cancel</a>
     </form>
