--- a/src/main/resources/templates/boots/bootDetails.html
+++ b/src/main/resources/templates/boots/bootDetails.html
@@ -19,8 +19,14 @@
     <p th:text="${boot.name}"></p>
     <h4>Description</h4>
     <p th:text="${boot.description}"></p>
-    <h4>Size</h4>
-    <p th:text="${boot.size}"></p>
+    <h4>Gender</h4>
+    <p th:text="${boot.gender}"></p>
+    <h4>Type</h4>
+    <p th:text="${boot.type}"></p>
+    <h4>Minimum Size</h4>
+    <p th:text="${boot.minSize}"></p>
+    <h4>Maximum Size</h4>
+    <p th:text="${boot.maxSize}"></p>
     <h4>Price</h4>
     <p th:text="${boot.price}"></p>
 </div>
